# mitopulse-web-v8

./: .dockerignore  .env.example  .gitignore  Dockerfile  MITOPULSE FASE DESARROLLO.docx  MitoPulse Global Architecture.docx  MitoPulse ONE.docx  MitoPulse Verify Global v1.docx  MitoPulse Verify.docx  MitoPulse.docx  MitoPulse_program_final.docx  Pitch_Socios_Estrategicos.doc  README.md  VERSION_V67_1.txt  WORKSPACE_MAP.txt  demo_results.txt  docker-compose.yml  options.json  render.yaml  requirements.txt  response.json  rfdc_evaluation.json  rfdc_evaluation_utf8.json  run.py  test.json  test_payload.json  verify_v20.py  🎬 Montaje de la Escena.docx
MitoPulse_Historico_v12/: README.md
MitoPulse_Unified_Pilot_v4/: README.md
MitoPulse_Web_MVP_v10_1/: mitopulse_v101.db
MitoPulse_Web_MVP_v10_2/: .env.example  mitopulse_v102.db
MitoPulse_Web_MVP_v10_Final/: README.md  mitopulse_v10.db  requirements.txt
MitoPulse_Web_MVP_v11/: README.md  main.py
MitoPulse_Web_MVP_v12_6/: Dockerfile  README.md  render.yaml  requirements.txt
MitoPulse_Web_MVP_v8_2/: README.md  requirements.txt
MitoPulse_v14_Explainability_Engine/: README.md
MitoPulse_v16_Trust_Propagation_Engine/: README.md
MitoPulse_v17_Guardian_Node_Layer/: README.md
MitoPulse_v18_Temp/: README.txt
MitoPulse_v69_extracted/: README.md
api/: app.py  db.py  (+4 more)
mitopulse_mvp3_v0_3/mitopulse_mvp3/sdk/: demo_local.py  pyproject.toml
mitopulse_mvp3_v0_3/mitopulse_mvp3/sdk/src/mitopulse_sdk/: api.py  client.py
mitopulse_mvp3_v0_3/mitopulse_mvp3/sdk/src/mitopulse_sdk.egg-info/: PKG-INFO  SOURCES.txt
(+1355 files in other folders)
