[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mitopulse-sdk"
version = "0.3.0"
description = "MitoPulse MVP Local-First SDK (index + dynamic identity id)"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
